CSS中stackoverflow小卡片做完，加入了链接

--- a/homework/homework2-CSS/Stackoverflow小卡片.html
+++ b/homework/homework2-CSS/Stackoverflow小卡片.html
@@ -23,7 +23,7 @@
             color: rgb(106, 115, 124);
             margin: 1px 0 4px 0;
         }
-        .user-card-body-photo > img {
+        .user-card-body-photo img {
             width: 32px;
             height: 32px;
             border-radius: 3px;
@@ -80,13 +80,17 @@
     </div>
     <div class="user-card-body">
         <div class="user-card-body-photo">
-            <img src="https://www.gravatar.com/avatar/84dd218304770335d0a408867d8cc407?s=64&amp;d=identicon&amp;r=PG"
-                 alt="aCuria's user avatar">
+            <a href="https://stackoverflow.com/users/325016/acuria">
+                <img src="https://www.gravatar.com/avatar/84dd218304770335d0a408867d8cc407?s=64&amp;d=identicon&amp;r=PG"
+                            alt="aCuria's user avatar">
+            </a>
         </div>
         <div class="user-card-body-info">
-            <div class="user-card-body-info-username">
-                aCuria
-            </div>
+            <a href="https://stackoverflow.com/users/325016/acuria" style="text-decoration: none">
+                <div class="user-card-body-info-username">
+                    aCuria
+                </div>
+            </a>
             <div class="user-card-body-info-reputation">
                 <span class="user-card-body-info-reputation-score">6,895</span>
                 <span class="user-card-body-info-reputation-badge">
